--- a/Friendly_Corner_backend/Friendly_Corner_backend/appsettings.Development.json
+++ b/Friendly_Corner_backend/Friendly_Corner_backend/appsettings.Development.json
@@ -8,6 +8,6 @@
   "Spotify": {
     "ClientId": "eb624a2023b5416bb50a76ad33ebb1e2",
     "ClientSecret": "63ede248f9f1457c86ec3ff84e0315d0",
-    "RedirectUri": "https://127.0.0.1:5000/api/spotifyauth/callback"
+    "RedirectUri": "https://localhost:5000/api/spotifyauth/callback"
   }
 }
